test/Macros/CodiraifyImport/MacroErrors/ArrayType.code
// REQUIRES: language_language_parser

// RUN: %target-typecheck-verify-language %s -language-version 5 -module-name main -disable-availability-checking -typecheck -plugin-path %language-plugin-dir -verify

@_CodiraifyImport(.countedBy(pointer: .param(1), count: "len"))
// expected-error@+1{{expected pointer type, got [CInt] with kind arrayType}}
fn myFunc(_ ptr: [CInt], _ len: String) {
}
